--- a/index.html
+++ b/index.html
@@ -134,9 +134,25 @@
                         alert(error);
                     console.error('Error:', error);
                     });     
-
-        
-    
+                   function myFunction() 
+                     {
+                        var input, filter, table1, trn, td, i, txtValue;
+                        input = document.getElementById("myInput");
+                        filter = input.value;
+                        table1 = document.getElementById("myTable");
+                        trn = table1.getElementsByTagName("tr");
+                        for (i = 0; i < trn.length; i++) {
+                            tn1 = trn[i].getElementsByTagName("td")[1];
+                            if (tn1) {
+                            txtValue = tn1.textContent || tn1.innerText;
+                            if (txtValue.indexOf(filter) > -1) {
+                                trn[i].style.display = "";
+                            } else {
+                                trn[i].style.display = "none";
+                            }
+                            }       
+                        }
+                    }    
 
         </script>
     </head>    
